hphp/hack/test/typecheck/shape_modified5.php.exp
File "shape_modified5.php", line 23, characters 12-13:
Invalid return type (Typing[4163])
File "shape_modified5.php", line 18, characters 8-22:
The field 'y' is optional
File "shape_modified5.php", line 17, characters 27-34:
The field 'y' is defined as required
